Remove most uses of Guava null filtering.