@@ -17,8 +17,6 @@
 
 package org.opensaml.security.x509.tls;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import javax.annotation.Nonnull;
@@ -29,10 +27,6 @@ import net.shibboleth.utilities.java.support.annotation.constraint.NotLive;
 import net.shibboleth.utilities.java.support.annotation.constraint.Unmodifiable;
 import net.shibboleth.utilities.java.support.logic.Constraint;
 import net.shibboleth.utilities.java.support.resolver.Criterion;
-
-import com.google.common.base.Predicates;
-import com.google.common.collect.Collections2;
-import com.google.common.collect.ImmutableList;
 
 /**
  * Criterion which holds one or more instances of {@link ClientTLSValidationConfiguration}.
@@ -49,10 +43,8 @@ public class ClientTLSValidationConfigurationCriterion implements Criterion {
      */
     public ClientTLSValidationConfigurationCriterion(@Nonnull @NonnullElements @NotEmpty final
             List<ClientTLSValidationConfiguration> configurations) {
-        Constraint.isNotNull(configurations, "List of configurations cannot be null");
-        configs = new ArrayList<>(Collections2.filter(configurations, Predicates.notNull()));
-        Constraint.isGreaterThanOrEqual(1, configs.size(), "At least one configuration is required");
-        
+        configs = List.copyOf(Constraint.isNotNull(configurations, "List of configurations cannot be null"));
+        Constraint.isNotEmpty(configs, "At least one configuration is required");
     }
     
     /**
@@ -62,9 +54,8 @@ public class ClientTLSValidationConfigurationCriterion implements Criterion {
      */
     public ClientTLSValidationConfigurationCriterion(@Nonnull @NonnullElements @NotEmpty final
             ClientTLSValidationConfiguration... configurations) {
-        Constraint.isNotNull(configurations, "List of configurations cannot be null");
-        configs = new ArrayList<>(Collections2.filter(Arrays.asList(configurations), Predicates.notNull()));
-        Constraint.isGreaterThanOrEqual(1, configs.size(), "At least one configuration is required");
+        configs = List.of(Constraint.isNotNull(configurations, "List of configurations cannot be null"));
+        Constraint.isNotEmpty(configs, "At least one configuration is required");
     }
     
     /**
@@ -73,7 +64,7 @@ public class ClientTLSValidationConfigurationCriterion implements Criterion {
      */
     @Nonnull @NonnullElements @NotLive @Unmodifiable @NotEmpty
     public List<ClientTLSValidationConfiguration> getConfigurations() {
-        return ImmutableList.copyOf(configs);
+        return configs;
     }
     
     /** {@inheritDoc} */
